6006
In Java, translation of Unicode escapes precedes tokenization. The count of prefixed backslashes is just to specify how you escape a Unicode escape. (It was never intended to consume the prefix.)
```scala
scala> val x = "\u0030"
x: String = 0

scala> val x = "\\u0030"
x: String = \u0030

scala> val x = "\\\u0030"
x: String = \0
```
Scala has smarter parsing to allow unicoded newline in strings but for some other reason not in comments.
```scala
scala> "\u000A"
res0: String =
"
"

scala> 42 // \u000A hi there
<console>:2: error: illegal start of simple expression
;
^
```
Embedded Unicode newline in strings is how SkyNet became self-aware, by the way. Some SQL went really bad.
